# flusion

./: .gitignore  Dockerfile  LICENSE  README.md  docker_entrypoint.sh  environment.yml
code/: README.md
code/data-pipeline/: README.md  pyproject.toml
code/data-pipeline/src/data_pipeline/: loader.py  utils.py
code/data-pipeline/tests/: test_load_data.py
code/eval/: flusight_eval.R  scoring_helpers.R
code/flusion/: README.md  flusion-manual-2023-11-22.R  flusion.R  validate_and_plot.R
code/flusion/retrospective-experiments/: flusion-retrospective.R  run-flusion-retrospective.R
code/gbq/: README.md  gbq.py  gbq_bootstrap.ipynb  gbq_qr.ipynb  gbq_qr.py  gbq_qr_no_level.ipynb  gbq_qr_no_level.py  gbq_qr_no_source.ipynb  preprocess.py  run.py  utils.py  validate_and_plot.R
code/gbq/configs/: base.py  gbq_qr.py  gbq_qr_fit_locations_separately.py  gbq_qr_hhs_only.py  gbq_qr_no_level.py  gbq_qr_no_reporting_adj.py  gbq_qr_no_transform.py
code/gbq/retrospective-experiments/: fill_gbq_no_level.py  gbq_qr_feat_importance.py  gbq_qr_hhs_only.py  (+4 more)
code/glg/: glg.py  glg_dev.ipynb
code/outpaint/: outpaint-environment.yml  outpaint.ipynb
code/sarix_model/: sarix.ipynb  sarix_model.py
data-raw/influenza-flusurv/: README.md
data-raw/influenza-hhs/: download-hhs.R  hhs.csv  hhs_complete.csv
data-raw/influenza-ilinet/: README.md
data-raw/influenza-who-nrevss/: README.md  download-who-nrevss.R
submissions-hub/model-metadata/: UMass-flusion.yml  UMass-gbq_bootstrap.yml  UMass-gbq_qr.yml  UMass-sarix.yml  UMass-sarix_4rt.yml  UMass-sarix_sqrt.yml
(+337 files in other folders)
